--- a/socket/tcp_client/CMakeLists.txt
+++ b/socket/tcp_client/CMakeLists.txt
@@ -3,4 +3,4 @@
 cmake_minimum_required(VERSION 3.16)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
-project(tcp_clients)
+project(tcp_client)
