optimize: compile cert and prvtkey to flash

--- a/mqtt/main/CMakeLists.txt
+++ b/mqtt/main/CMakeLists.txt
@@ -1,2 +1,5 @@
 idf_component_register(SRCS "main.c"
-                    INCLUDE_DIRS "")
+                    INCLUDE_DIRS ""
+                    EMBED_TXTFILES "certs/mosquitto_cert.pem"
+                                   "certs/client_cert.pem"
+                                   "certs/client_prvtkey.pem")
