--- a/mbedtls/mbedtls_http_client/CMakeLists.txt
+++ b/mbedtls/mbedtls_http_client/CMakeLists.txt
@@ -3,4 +3,6 @@
 cmake_minimum_required(VERSION 3.16)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
-project(http_mbedtls)
+project(mbedtls_http_client)
+
+target_add_binary_data(${CMAKE_PROJECT_NAME}.elf "main/certs/howsmyssl_root.crt" TEXT)
