--- a/aliyun/ir_rmt/CMakeLists.txt
+++ b/aliyun/ir_rmt/CMakeLists.txt
@@ -8,3 +8,4 @@ include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(ir_rmt)
 
 target_add_binary_data(${CMAKE_PROJECT_NAME}.elf "main/certs/global_sign.crt" TEXT)
+target_add_binary_data(${CMAKE_PROJECT_NAME}.elf "index.html.gz" TEXT)
