ir_rmt: add local https ota

--- a/aliyun/ir_rmt/CMakeLists.txt
+++ b/aliyun/ir_rmt/CMakeLists.txt
@@ -7,5 +7,8 @@ set(PROJECT_VER "1.2.3")
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(ir_rmt)
 
-target_add_binary_data(${CMAKE_PROJECT_NAME}.elf "global_sign.crt" TEXT)
+target_add_binary_data(${CMAKE_PROJECT_NAME}.elf "remote_server_root.crt" TEXT)
+target_add_binary_data(${CMAKE_PROJECT_NAME}.elf "local_ota_sign_pub.key" TEXT)
+target_add_binary_data(${CMAKE_PROJECT_NAME}.elf "local_https_server.crt" TEXT)
+target_add_binary_data(${CMAKE_PROJECT_NAME}.elf "local_https_server_priv.key" TEXT)
 target_add_binary_data(${CMAKE_PROJECT_NAME}.elf "index.html.gz" TEXT)
