--- a/websocket/client/CMakeLists.txt
+++ b/websocket/client/CMakeLists.txt
@@ -5,5 +5,6 @@ cmake_minimum_required(VERSION 3.16)
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(websocket_client)
 
-target_add_binary_data(${CMAKE_PROJECT_NAME}.elf "server.crt" TEXT)
-target_add_binary_data(${CMAKE_PROJECT_NAME}.elf "server_priv.key" TEXT)
+target_add_binary_data(${CMAKE_PROJECT_NAME}.elf "server_ca.crt" TEXT)
+target_add_binary_data(${CMAKE_PROJECT_NAME}.elf "client.crt" TEXT)
+target_add_binary_data(${CMAKE_PROJECT_NAME}.elf "client.key" TEXT)
